--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "9.3.5",
+    "node-fetch": "^2.6.0",
+    "query-string": "^6.12.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
