--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "bulma": "^0.8.2",
     "cors": "^2.8.5",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
+    "openweather-apis": "^4.2.0",
     "query-string": "^6.12.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.3"
   }
 }
