--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.12.0",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
     "openweather-apis": "^4.2.0",
