--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.3",
+    "styled-components": "^5.1.0",
     "weathericons": "^2.1.0"
   }
 }
