--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "feather-icons": "^4.28.0",
     "next": "9.3.5",
     "node-fetch": "^2.6.0",
     "openweather-apis": "^4.2.0",
@@ -19,7 +20,6 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.3",
-    "styled-components": "^5.1.0",
     "weathericons": "^2.1.0"
   }
 }
