--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "bulma": "^0.8.2",
@@ -21,5 +22,9 @@
     "react-dom": "16.13.1",
     "sass": "^1.26.3",
     "weathericons": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^25.1.0",
+    "jest": "^25.1.0"
   }
 }
