--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "all-the-cities": "^3.1.0",
     "bulma": "^0.8.2",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
@@ -24,6 +25,5 @@
     "react-dom": "^18.2.0",
     "sass": "^1.26.3",
     "weathericons": "^2.1.0"
-  },
-  "devDependencies": {}
+  }
 }
