--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
-    "feather-icons": "^4.28.0",
     "next": "^12.3.1",
     "node-fetch": "^2.6.7",
     "openweather-apis": "^4.2.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "sass": "^1.26.3",
     "weathericons": "^2.1.0"
   }
