--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "react-feather": "^2.0.10",
     "sass": "^1.26.3",
     "weathericons": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "typescript": "4.9.3"
   }
 }
