--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "all-the-cities": "^3.1.0",
     "bulma": "^0.9.4",
+    "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.3.1",
     "node-fetch": "^2.6.7",
     "openweather-apis": "^4.2.0",
