--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/all-the-cities": "^3.1.0",
     "@types/node": "18.11.9",
+    "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.25",
     "typescript": "4.9.3"
   }
