--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@types/all-the-cities": "^3.1.0",
+    "@types/chroma-js": "^2.1.4",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.25",
