--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "all-the-cities": "^3.1.0",
@@ -35,6 +36,8 @@
     "@types/node": "18.11.9",
     "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.25",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "typescript": "4.9.3"
   }
 }
