--- a/.gitignore
+++ b/.gitignore
@@ -2,24 +2,20 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
-# production
+# next.js, production, build files
+/.next
+/.vercel
 /build
+# production
 
 # misc
 .DS_Store
 
 # debug
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
@@ -28,6 +24,3 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
-.now
-.vercel
