--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "sass": "^1.56.2",
+    "styled-components": "^5.3.6",
     "weathericons": "^2.1.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/node": "18.11.12",
     "@types/node-fetch": "2.6.2",
     "@types/react": "18.0.26",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "typescript": "4.9.4"
