--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "all-the-cities": "^3.1.0",
@@ -30,6 +31,7 @@
     "weathericons": "^2.1.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.0.6",
     "@types/all-the-cities": "3.1.0",
     "@types/chroma-js": "2.1.4",
     "@types/lodash.debounce": "4.0.7",
