--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "all-the-cities": "^3.1.0",
     "bulma": "^0.9.4",
     "chroma-js": "^2.4.2",
@@ -41,6 +42,11 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "prisma": "^4.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
