--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "16.x"
   },
+  "author": {
+    "name": "Andrew Kowalczyk"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,14 +23,16 @@
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "date-fns-tz": "^1.3.7",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.105.0-alpha.4",
     "next": "^12.3.1",
     "node-fetch": "^2.6.7",
     "openweather-apis": "^4.2.0",
     "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "weathericons": "^2.1.0"
   },
@@ -39,8 +44,9 @@
     "@types/node": "18.11.12",
     "@types/node-fetch": "2.6.2",
     "@types/react": "18.0.26",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
-    "eslint": "8.29.0",
+    "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
