ensure newlines between import groups

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "import/order": ["error"]
+    "import/order": ["error", { "newlines-between": "always" }]
   }
 }
