--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
+    "swr": "^2.0.0",
     "weathericons": "^2.1.0"
   },
   "devDependencies": {
