--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moon": "^2.0.2",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swr": "^2.0.0",
