--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.0.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/all-the-cities": "3.1.0",
     "@types/chroma-js": "2.1.4",
+    "@types/jest": "^29.2.4",
     "@types/lodash.debounce": "4.0.7",
     "@types/node": "18.11.12",
     "@types/node-fetch": "2.6.2",
@@ -47,6 +50,8 @@
     "all-the-cities": "^3.1.0",
     "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4"
