--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/lib/*": ["lib/*"]
+    }
   },
   "include": ["./types/*.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
