--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
