UI rework, across the board improvements:
- remove settings drawer, add menu bar
- move city search into menu bar
- rework application container so that the app is always the viewport height
- move app containers to `_app` component
- ensure everything is more responsive at each device width
- add simple welcome message
-add react-use for useful hooks
- add more tests to util files

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-moon": "^2.0.2",
     "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
     "swr": "^2.0.0",
     "weathericons": "^2.1.0"
