--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-fetch": "^2.6.7",
     "query-string": "^7.1.3",
     "react": "^18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-moon": "^2.0.2",
     "react-transition-group": "^4.4.5",
