--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "@sentry/nextjs": "^7.30.0",
     "bulma": "^0.9.4",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
