--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
 # Sentry
 .sentryclirc
+
+# TypeScript
+tsconfig.tsbuildinfo
