--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "name": "Andrew Kowalczyk"
   },
   "scripts": {
-    "dev": "next dev",
+    "analyze": "ANALYZE=true next build",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
+    "start": "next start",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "analyze": "ANALYZE=true next build"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
@@ -59,7 +60,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "^5.3.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
