--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/styled-components": "^5.1.26",
     "all-the-cities": "^3.1.0",
     "eslint": "^8.47.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^14.0.4",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prisma": "^4.7.1",
